cleanedup some code and addded a way to make the line moving

--- a/ml/test1.html
+++ b/ml/test1.html
@@ -8,5 +8,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
     <script src="./test1.js"></script>
+    <p>The purple dots on the top / left side are guessed write by the perceptron, the yellow dots are the write guessed ones on the other side and the red dots are what the perceptron guessed not write</p>
   </body>
 </html>
